<resources>
    <string name="app_name">HimatikaApp</string>
    <string name="selamat_datang_text">Selamat Datang!</string>
    <string name="deskripsi_text">Silahkan masuk / mendaftar untuk \nmenggunakan aplikasi Himatika</string>
    <string name="masuk_text">MASUK</string>
    <string name="daftar_text">DAFTAR</string>
    <string name="informatics_text">INFORMATICS</string>
    <string name="made_with_text">MADE WITH ♥ FOR</string>
    <string name="organization_name">HIMATIKA UTY</string>
    <string name="condes_logo_himatika">Logo Himatika UTY</string>
    <string name="condes_back_button_in_login">Tombol kembali ke halaman awal</string>
    <string name="greeting_desc_login">Untuk tetap terhubung dengan kami,\nsilahkan masuk menggunakan\ndata akun anda.</string>
    <string name="greeting_login">Selamat Datang Kembali!</string>
    <string name="condes_fb_login">Login with Facebook</string>
    <string name="condes_google_login">Login with Google</string>
    <string name="condes_linkedin_login">Login with Linkedin</string>
    <string name="with_email_text">atau gunakan akun email anda</string>
    <string name="lost_password_text">Lupa Password?</string>
    <string name="hint_password_text">Password</string>
    <string name="hint_username_text">Username</string>
    <string name="greeting_register">Buat Akun Baru</string>
    <string name="greeting_desc_register">Silahkan masukkan data pribadi anda,\ndan mulailah terhubung bersama kami.</string>
    <string name="hint_name_text">Nama Lengkap</string>
    <string name="condes_fb_register">Register with Facebook</string>
    <string name="condes_google_register">Register with Google</string>
    <string name="condes_linkedin_register">Register with Linkedin</string>
</resources>