<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abuabu1"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_arrow_left"
            android:layout_gravity="start"
            android:contentDescription="@string/condes_back_button_in_login" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="54dp"
            android:src="@drawable/imageview_logo"
            android:contentDescription="@string/condes_logo_himatika" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/background_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">


            <TextView
                android:id="@+id/tv_greeting_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/greeting_login"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_greeting_desc_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting_desc_login"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="18dp"
                android:textColor="@color/text_gray1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_greeting_login" />

            <LinearLayout
                android:id="@+id/form_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="28dp"
                android:background="@drawable/bg_white_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_greeting_desc_login">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    
                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/facebook_button"
                        android:padding="0dp"
                        android:contentDescription="@string/condes_fb_login"/>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/google_button"
                        android:padding="0dp"
                        android:contentDescription="@string/condes_google_login"/>

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/linkedin_button"
                        android:padding="0dp"
                        android:contentDescription="@string/condes_linkedin_login"/>
                    
                </LinearLayout>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/with_email_text"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/abuabu2"
                    android:layout_marginVertical="18dp"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_default_ui"
                    android:drawableStart="@drawable/ic_person_24"
                    android:padding="12dp"
                    android:inputType="textAutoComplete"
                    android:hint="@string/hint_username_text"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:drawablePadding="12dp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_marginTop="12dp"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_default_ui"
                    android:drawableStart="@drawable/ic_lock_24"
                    android:padding="12dp"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password_text"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    android:drawablePadding="12dp"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/button_lost_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_password_text"
                    android:layout_marginVertical="14dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_process_login"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/masuk_text" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/made_with_text"
                android:layout_marginTop="24dp"
                android:textColor="@color/abuabu2"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/informatics_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_login" />

            <TextView
                android:id="@+id/informatics_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informatics_text"
                android:textColor="@color/abuabu2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>